--- a/userChrome.css
+++ b/userChrome.css
@@ -66,11 +66,11 @@
 	padding: 0 12px !important;
 }
 
-/* Show Sound Icon While Audio Playing */
-.tabbrowser-tab .tab-icon-stack[soundplaying='true'] .tab-icon-image {
+/* Show Sound Icon While Audio Playing On Non-Selected Tab */
+.tabbrowser-tab:not([visuallyselected="true"], [multiselected]) .tab-icon-stack[soundplaying='true'] .tab-icon-image {
 	opacity: 0 !important;
 }
 
-.tabbrowser-tab .tab-icon-stack[soundplaying='true'] .tab-icon-overlay[soundplaying='true'] {
+.tabbrowser-tab:not([visuallyselected="true"], [multiselected]) .tab-icon-stack[soundplaying='true'] .tab-icon-overlay[soundplaying='true'] {
 	opacity: 1 !important;
 }
